--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amesa solutions</title>
+     <meta
+      name="google-site-verification"
+      content="X7VtLhZNNexchnhfKv_EYgGEaayYKV2jFjh6yncDJh8"
+    />
+    <meta
+      name="description"
+      content="Amesa Solutions is a company that builds amazing websites and softwares"
+    />
+    <meta
+      name="keywords"
+      content="amesa, Amesa , Amesa Solutions, Amesa solution, Web Development, amesa solutions, Code, Somalia, Somalia developers"
+    />
+
+    <link rel="canonical" href="https://amesasolutions.com/" />
+    <meta property="og:url" content="https://amesasolutions.com/" />
+    <meta property="og:site_name" content="Amesa Solutions" />
+    <meta property="og:title" content="Amesa Solutions" />
+    <meta
+      property="og:description"
+      content="Amesa Solutions is a company that builds amazing websites and softwares"
+    />
+    <meta property="og:local" content="Somalia and Kenya" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/android-chrome-512x512.png" />
+    <meta property="og:image:type" content="image/png" />
   </head>
   <body>
     <div id="root"></div>
